--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adopt-me",
+  "name": "devhire",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,6 +26,6 @@
     "@tanstack/react-query": "^4.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.22.0"
   }
 }
